--- a/native-android-example-pos/src/main/res/values/strings.xml
+++ b/native-android-example-pos/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
   <string name="device_status_resend">Device Status (Resend)</string>
   <string name="disable_device_printing">Disable Device Printing</string>
   <string name="disable_device_receipt_options">Disable Device Receipt Options Screen</string>
+  <string name="disable_transaction_restart_on_fail">Disable Restart Transaction on Fail</string>
   <string name="device_options">Device Options</string>
   <string name="device_status">Device Status: </string>
   <string name="disable_duplicate_payment_checking">Disable Duplicate Payment Checking</string>
